search initiation done

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,15 @@
 {% block content %}
 <div class="container">
     <h1>Welcome to the Home Page</h1>
-   
+
+
+    <form method="GET" action="{% url 'home' %}">
+        <div class="input-group mb-3">
+            <input type="text" name="q" class="form-control" placeholder="Search staff..." value="{{ query|default:'' }}">
+            <button class="btn btn-outline-secondary" type="submit">Search</button>
+        </div>
+    </form>
+
     
     <h2>Staff Entries</h2>
     <table class="table table-striped">
