--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <h1>Welcome to the Home Page</h1>
-
+    {%if user.is_authenticated%}
 
     <form method="GET" action="{% url 'home' %}">
         <div class="input-group mb-3">
@@ -55,4 +55,12 @@
         </tbody>
     </table>
 </div>
+            {%else%}
+
+            <div class="w3-container w3-border w3-large">
+                <div class="w3-red"><h1>Welcome to SMS</h1></div>
+                <div class="w3-blue"><p>just login and check out</p></div>
+              </div>
+
+              {%endif%}
 {% endblock %}
